--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
 </header>
 <main>
 <!-- Hero CTA Section -->
-<section class="hero-section">
+<section class="hero-section section-padding">
     <div class="container hero-container">
     <h1 class="main-title">Effective Solutions for Your Business</h1>
-    <div class="hero-container-button">
-    <button class="order-btn" type="button">Order Service</button>  
-</div>
+    <button class="order-btn button-container" type="button">Order Service</button>  
 </div>
 </section>
 <!-- Our services -->
@@ -57,15 +55,16 @@
                 <h3 class="service-block-title">Strategy</h3>
                 <p class="service-block-paragraph">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li>
+            <li class="service-block-items">
                 <h3 class="service-block-title">Punctuality</h3>
                 <p class="service-block-paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
+            <li class="service-block-items">
                 <h3 class="service-block-title">Diligence</h3>
                 <p class="service-block-paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li><h3 class="service-block-title">Technologies</h3>
+            <li class="service-block-items">
+                <h3 class="service-block-title">Technologies</h3>
                 <p class="service-block-paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
         </ul>
         </div>
@@ -77,20 +76,21 @@
         <ul class="team-section-list">
             <li class="team-section-item">
                 <img class="team-image" src="./images/guerrero.jpg" alt="Mark Guerrero" width="264" height="260"/>
-                <h3 class="team-item-title">Mark Guerrero</h3>
-                <p class="team-item-paragraph">Product Designer</p>
+                <div class="team-description"> <h3 class="team-item-title">Mark Guerrero</h3>
+                <p class="team-item-paragraph">Product Designer</p></div>
             </li>
             <li class="team-section-item"><img class="team-image" src="./images/ford.jpg" alt="Tom Ford" width="264" height="260"/>
-                <h3 class="team-item-title">Tom Ford</h3>
-                <p class="team-item-paragraph">Frontend Developer</p>
+                <div class="team-description"> <h3 class="team-item-title">Tom Ford</h3>
+                    <p class="team-item-paragraph">Frontend Developer</p>
+                </div>
             </li>
             <li class="team-section-item"><img class="team-image" src="./images/garcia.jpg" alt="Camila Garcia" width="264" height="260"/>
-                <h3 class="team-item-title">Camila Garcia</h3>
-                <p class="team-item-paragraph">Marketing</p>
+                <div class="team-description"><h3 class="team-item-title">Camila Garcia</h3>
+                    <p class="team-item-paragraph">Marketing</p></div>
             </li>
             <li class="team-section-item"><img class="team-image" src="./images/wilson.jpg" alt="Daniel Wilson" width="264" height="260"/>
-                <h3 class="team-item-title">Daniel Wilson</h3>
-                <p class="team-item-paragraph">UI Designer</p>
+                <div class="team-description"><h3 class="team-item-title">Daniel Wilson</h3>
+                    <p class="team-item-paragraph">UI Designer</p></div>
             </li>
         </ul>
         </div>
@@ -102,33 +102,35 @@
         <ul class="portfolio-list">
             <li class="portfolio-list-item">
                 <img class="portfolio-image" src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300"/>
-                <h3 class="portfolio-list-title" >Banking App</h3>
-                <p class="portfolio-list-paragraph">App</p>
+                <div class="porfolio-block"><h3 class="portfolio-list-title" >Banking App</h3>
+                    <p class="portfolio-list-paragraph">App</p>
+                </div>
             </li>
             <li class="portfolio-list-item">
                 <img class="portfolio-image" src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300"/>
-                <h3 class="portfolio-list-title">Cashless Payment</h3>
-                <p class="portfolio-list-paragraph">Marketing</p>
+                <div class="porfolio-block"><h3 class="portfolio-list-title">Cashless Payment</h3>
+                    <p class="portfolio-list-paragraph">Marketing</p></div>
             </li>
             <li class="portfolio-list-item">
                 <img class="portfolio-image" src="./images/meditation.jpg" alt="Mediation App" width="360" height="300"/>
-                <h3 class="portfolio-list-title">Meditation App</h3>
-                <p class="portfolio-list-paragraph">App</p>
+                <div class="porfolio-block"><h3 class="portfolio-list-title">Meditation App</h3>
+                    <p class="portfolio-list-paragraph">App</p>
+                </div>
             </li>
             <li class="portfolio-list-item">
                 <img class="portfolio-image" src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300"/>
-                <h3 class="portfolio-list-title">Taxi Service</h3>
-                <p class="portfolio-list-paragraph">Marketing</p>
+                <div class="porfolio-block"><h3 class="portfolio-list-title">Taxi Service</h3>
+                    <p class="portfolio-list-paragraph">Marketing</p></div>
             </li>
             <li class="portfolio-list-item">
                 <img class="portfolio-image" src="./images/screen.jpg" alt="Screen Illustrationsn" width="360" height="300"/>
-                <h3 class="portfolio-list-title">Screen Illustrations</h3>
-                <p class="portfolio-list-paragraph">Design</p>
+                <div class="porfolio-block"><h3 class="portfolio-list-title">Screen Illustrations</h3>
+                    <p class="portfolio-list-paragraph">Design</p></div>
             </li>
             <li class="portfolio-list-item">
                 <img class="portfolio-image" src="./images/online.jpg" alt="Online Courses" width="360" height="300"/>
-                <h3 class="portfolio-list-title">Online Courses</h3>
-                <p class="portfolio-list-paragraph">Marketing</p>
+                <div class="porfolio-block"><h3 class="portfolio-list-title">Online Courses</h3>
+                    <p class="portfolio-list-paragraph">Marketing</p></div>
             </li>
         </ul>
         </div>
@@ -136,7 +138,7 @@
 </main>
 <!-- Footer-->
 <footer class="page-footer">
-    <div class="container container-footer">
+    <div class="container container">
     <a class="page-footer-logo" href="./index.html">WEB<span class="footer-logo-color">Studio</span></a>
     <p class="page-footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </div>
