--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </header>
 <main>
 <!-- Hero CTA Section -->
-<section class="hero-section section-padding">
+<section class="hero-section">
     <div class="container hero-container">
     <h1 class="main-title">Effective Solutions for Your Business</h1>
     <button class="order-btn button-container" type="button">Order Service</button>  
